fix: margins are symmetrical on small and large screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -512,9 +512,8 @@ footer ul {
 
 .eventBox {
   width: 100vw;
-  margin-top: 3px;
+  /* margin-top: 5%; */
   /* border: 1px solid red; */
-  /* max-width:100%;  */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -535,7 +534,7 @@ footer ul {
   max-width: 95vw;
   border-radius: 5px;
   border: 3px solid #ffff;
-  margin-top: clamp(1px, 5%, 70px);
+  margin-top: clamp(1px, 10%, 85px);
   border-width: clamp(1px, 1vw, 5px);
 }
 
@@ -544,7 +543,7 @@ footer ul {
   border: 1px solid #8f897c;
   background-color: #ffff;
   border-radius: 5px;
-  margin: 3% 0% 0% 0%;
+  margin: 3% 5% 0% 5%;
   margin-top: clamp(1px, 10%, 85px);
   max-width: 95vw;
 }
@@ -581,7 +580,7 @@ footer ul {
 .descriptionAndTicketsWrapper {
 
   width: 100vw;
-  margin-top: 3px;
+  /* margin-top: 3px; */
   /* border: 1px solid green; */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -607,7 +606,7 @@ footer ul {
   padding: 2%;
   border-radius: 5px;
   border: 1px solid #8f897c;
-  margin: 3% 0% 3% 0%;
+  margin: 3% 5% 0% 5%;
   margin-top: clamp(1px, 10%, 85px);
 }
 
@@ -624,7 +623,7 @@ footer ul {
   background-color: #fff;
   -ms-flex-item-align: start;
       align-self: flex-start;
-     margin: 3% 0% 5% 0%;
+     margin: 3% 5% 5% 5%;
   margin-top: clamp(1px, 10%, 85px);
   margin-bottom: clamp(1px, 10%, 85px);
   padding: 1%;
@@ -1031,7 +1030,7 @@ h1 span {
   }
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1160px) {
     .eventBox img{
         width: 600px;
         margin-left: 1.5%;
@@ -1040,6 +1039,7 @@ h1 span {
 
     .eventDetails {
         width: 500px;
+        /* margin-top: 0; */
     margin-left: 1.5%;
     margin-right: 1.5%;
     }
@@ -1048,6 +1048,7 @@ h1 span {
         width: 600px;
         margin-left: 1.5%;
         margin-right: 1.5%;
+        margin-bottom: clamp(1px, 10%, 85px);
         padding: 2% 4% 5% 4%;
     }
 
@@ -1064,7 +1065,7 @@ h1 span {
 
 }
 
-@media only screen and (min-width: 768px) and (max-width: 999px) {
+@media only screen and (min-width: 768px) and (max-width: 1159px) {
   .description {
     width: min(70ch, 95vw);
   }
